<resources>
    <string name="app_name">MyPersonalDiary</string>
    <string name="loading_please_wait">Loading Please Wait</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="minimum_three_charaters_required">Minimum 3 characters required</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pasword_confirm_password_do_not_match">Password and Confirm Passwords do not match</string>
    <string name="change_theme">Change Theme</string>
    <string name="apply">Apply</string>
    <string name="select_theme">Select Theme</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure, you want to logout ?</string>
    <string name="close">Close</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="no_stay">No, Stay</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="profile">Profile</string>
    <string name="user_name_already_exists">Username already exists, please use different username</string>
    <string name="welcome_with_name">Welcome %s</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="could_not_change_password">Password change unsuccessful, please try again</string>
</resources>
