<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_screen_blue"
    tools:context=".fragments.ChangePasswordFragment">

    <RelativeLayout
        android:layout_width="@dimen/dp350"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/dp10"
        android:background="@drawable/input_box_curved">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change_password_title"
            android:text="@string/change_password"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/sp30" />

        <EditText
            android:id="@+id/edit_cp_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp32"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="@dimen/dp10"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/input_box_curved"
            android:layout_below="@id/change_password_title"/>

        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/edit_cp_old_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp32"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:padding="@dimen/dp10"
            android:background="@drawable/input_box_curved"
            android:layout_below="@id/edit_cp_username"/>

        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/edit_cp_new_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp32"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:padding="@dimen/dp10"
            android:background="@drawable/input_box_curved"
            android:layout_below="@id/edit_cp_old_password"/>

        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/edit_cp_confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp32"
            android:layout_width="@dimen/dp250"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:padding="@dimen/dp10"
            android:background="@drawable/input_box_curved"
            android:layout_below="@id/edit_cp_new_password"/>

        <Button
            android:layout_centerHorizontal="true"
            android:text="@string/change"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_password"
            android:background="@drawable/login_button_bg"
            android:layout_below="@id/edit_cp_confirm_password"
            android:layout_marginTop="@dimen/dp32"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>