<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/close_new"
        android:text="@string/close"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/black" />

    <TextView
        android:id="@+id/text_confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/app_text_color"
        app:layout_constraintTop_toBottomOf="@id/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:text="@string/yes_logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_confirmation_message"
        app:layout_constraintTop_toBottomOf="@+id/text_confirmation_message" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp10"
        android:text="@string/no_stay"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_confirmation_message"
        app:layout_constraintTop_toBottomOf="@+id/text_confirmation_message" />

</androidx.constraintlayout.widget.ConstraintLayout>