<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/login_screen_blue"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/sp30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="@dimen/dp250"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_box_curved"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/dp250"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_box_curved"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_name" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:textColor="@color/white"
        android:background="@drawable/login_button_bg"/>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/view_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_two"
        app:layout_constraintTop_toTopOf="@+id/text_register" />

    <View
        android:id="@+id/view_two"
        android:layout_width="@dimen/dp2"
        android:layout_height="@dimen/dp20"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_register" />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateDrawable="@drawable/progress_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>